feat(creating environtment and creating authentication fiture)

--- a/README
+++ b/README
@@ -55,7 +55,7 @@ A modern **SaaS E-Commerce platform** built with a scalable **multi-service arch
 - [ ] Subscription & billing
 - [ ] Payment gateway integration
 - [ ] Role-based access control
-- [ ] Admin dashboard
+- [ ] Admin dashboardf
 - [ ] Docker & CI/CD
 
 ---
